# boycott

./: .env_example  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.example  README.md  auto_commit.py  daily_commit.txt  manage.py  pyproject.toml  script.py
.github/workflows/: auto_commit.yml
apps/account/: admin.py  apps.py  choices.py  services.py  signals.py  urls.py
apps/account/fixtures/: user.json
apps/account/forms/: authentication.py  invitation.py  registration.py
apps/account/migrations/: 0001_initial.py  0002_alter_emailverificationcode_expires_at.py  0002_invitation_role_invitation_user.py
apps/product/: admin.py  mixins.py  signals.py  translation.py  urls.py
apps/user/: admin.py  choices.py  urls.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  environment.py  production.py
docker/: .dockerignore  Dockerfile  docker-compose.yaml  entrypoint.sh
nginx/: boycott.kg  boycott.service  boycott.socket
static/css/: base.css  styles.css
templates/: base.html  home.html  index.html
templates/account/: invitation_send.html  registration.html  verification_code.html
templates/includes/: categories.html  chat.html  footer.html  header.html  info_blocks.html  pagination.html  product_card.html  search.html  star_rating.html
templates/layouts/: base.html
templates/pages/: category.html  product_detail.html
templates/product/: category_detail.html  category_list.html  product_detail.html  product_list.html
templates/user/: base.html  invitation_send.html  registration.html
(+43 files in other folders)
